src/test/ui/pattern/const-pat-unreachable.stderr
error: unreachable pattern
  --> $DIR/const-pat-unreachable.rs:11:9
   |
LL |         FOO => {}
   |         ^^^
   |
note: the lint level is defined here
  --> $DIR/const-pat-unreachable.rs:2:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/const-pat-unreachable.rs:12:9
   |
LL |         BAR => {}
   |         ^^^

error: aborting due to 2 previous errors

